First Refactorings. Much duplicate Code but not complete